# wi-fi

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  wi-fi.code-workspace
main/: CMakeLists - Copy.txt  CMakeLists.txt  Kconfig.projbuild  file_server.c  file_server.h  json.h  main.c  nvs_sync.h  sdmmc.c  sdmmc.h  spi.c  spi.h  uart_tcp_server.c  uart_tcp_server.h  wifi_manager.c  wifi_manager.h
main/webfiles/: file_manager.html  upgrade.html  wifi.html
